--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -7,11 +7,11 @@ jobs:
     name: Lint code base
     runs-on: ubuntu-latest
     steps:
-      name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
     
-      name: Run Super-Linter
-      uses: github/super-linter@v3
-      env:
-        DEFAULT_BRANCH: main
-        GITHUB_TOKEN: ${{ secrets.GITHUB_token }}
+      - name: Run Super-Linter
+        uses: github/super-linter@v3
+        env:
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_token }}
