--- a/ChainBlock/manifest.json
+++ b/ChainBlock/manifest.json
@@ -1,17 +1,30 @@
 {
-  "name": "CHainBlock",
-  "description": "Bruh",
+  "name": "ChainBlock",
+  "description": "Block those pesky NFT bros!",
   "version": "1.0",
   "manifest_version": 3,
-
+  "icons": {
+    "16": "icons/ChainBlock_logo_16.png",
+    "32": "icons/ChainBlock_logo_32.png",
+    "48": "icons/ChainBlock_logo_48.png",
+    "128": "icons/ChainBlock_logo_128.png"
+  },
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-        "16": "/images/ChainBlock_logo_16.png",
-        "32": "/images/ChainBlock_logo_32.png",
-        "48": "/images/ChainBlock_logo_48.png",
-        "128": "/images/ChainBlock_logo_128.png"
-    }
+    "default_icon": "icons/ChainBlock_logo_48.png",
+    "default_title": "ChainBlock",
+    "default_popup": "popup.html"
+  },
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "scripting",
+    "storage"
+  ],
+  "host_permissions": [
+	"https://api.twitter.com/*"
+  ],
+  "content_security_policy": {
+	"script-src": "self",
+	"object-src": "self"
   }
 }
-
